// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checklist Upload leave certification step renders adoption bonding leave content if claim reason is adoption 1`] = `"You need to provide a statement confirming the placement and the date of placement."`;

exports[`Checklist Upload leave certification step renders medical leave content if claim reason is medical 1`] = `
Array [
  "You need to provide your completed ",
  <a
    href="https://www.mass.gov/hcp-form"
    key="1"
    rel="noopener"
    target="_blank"
  >
    Health Care Provider Certification
  </a>,
  ". ",
]
`;

exports[`Checklist Upload leave certification step renders newborn bonding leave content if claim reason is newborn 1`] = `"You need to provide your child's birth certificate or a document from a health care provider that shows the child’s birth date."`;

exports[`Checklist renders 'In progress' version of Part 1 StepList description when claim isn't yet submitted 1`] = `"Your progress is automatically saved as you complete the application. You can edit any information you enter in Part 1 until step 5 is completed."`;

exports[`Checklist renders description for Step 1`] = `
Array [
  <p
    key="p-0"
  >
    You can use a variety of documents to verify your identity, but it’s easiest if you have a Massachusetts driver’s license or Massachusetts Identification Card.
  </p>,
  <p
    key="p-1"
  >
    You will need to provide:
  </p>,
  <ul
    className="usa-list"
    key="2"
  >
    <li
      key="0"
    >
      Your name as it appears on your ID.
    </li>
    <li
      key="1"
    >
      Your driver’s license number or Mass ID number, if you have one.
    </li>
    <li
      key="2"
    >
      Your Social Security Number or Individual Taxpayer Identification Number.
    </li>
  </ul>,
]
`;

exports[`Checklist renders description for Step 2`] = `
Array [
  <p
    key="p-0"
  >
    If you are taking medical leave due to injury, illness, or pregnancy, you need to have your health care provider fill out 
    <a
      href="https://www.mass.gov/hcp-form"
      key="1"
      rel="noopener"
      target="_blank"
    >
      the certification form
    </a>
    . Some of the answers you will need for the online application will come from your health care provider’s answers on the certification form.
  </p>,
  <p
    key="p-1"
  >
    If you are taking leave to bond with a child, you will need to know:
  </p>,
  <ul
    className="usa-list"
    key="2"
  >
    <li
      key="0"
    >
      The child's date of birth, due date, or the date they arrived in your home for adoption or foster care.
    </li>
    <li
      key="1"
    >
      When you want your leave to begin and end.
    </li>
  </ul>,
]
`;

exports[`Checklist renders description for Step 3`] = `
Array [
  "You will need to know:",
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Your employer’s 9-digit federal employer identification number (FEIN or EIN). 
      <br
        key="br-1"
      />
      <strong
        key="strong-2"
      >
        Where to find this: 
      </strong>
      on your W-2 or 1099, or ask your employer’s finance department.
    </li>
    <li
      key="1"
    >
      The date you told your employer you were taking leave.
    </li>
  </ul>,
]
`;

exports[`Checklist renders description for Step 4`] = `
Array [
  "You will need to know:",
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      If you will use any benefits from your employer because you are taking leave.
    </li>
    <li
      key="1"
    >
      If you will receive income from any other sources during your leave.
    </li>
    <li
      key="2"
    >
      The dates for any leave you’ve taken since January 1, 2021 for a condition that is covered by Paid Family and Medical Leave.
    </li>
  </ul>,
]
`;

exports[`Checklist renders description for Step 5`] = `
Array [
  <p
    key="p-0"
  >
    Once you confirm your leave information, we’ll notify your employer. Your job will be protected. To complete your application, you will need to finish the last three steps and submit.
  </p>,
  <p
    key="p-1"
  >
    If you need to edit your information in Part 1 after completing this step, you’ll need to call the Contact Center at 833‑344‑7365.
  </p>,
]
`;

exports[`Checklist renders description for Step 6`] = `
Array [
  <p
    key="p-0"
  >
    Tell us how you want to receive payment.
  </p>,
  <p
    key="p-1"
  >
    If you want to receive payment by direct deposit, you will need to provide your bank account information, including a routing number and account number.
  </p>,
]
`;

exports[`Checklist renders description for Step 7`] = `"Upload proof of identity. If you entered a Massachusetts driver’s license or Mass ID number in step 1, upload the same ID."`;

exports[`Checklist renders description for Step 8`] = `"You need to provide your child's birth certificate or a document from a health care provider that shows the child’s birth date."`;

exports[`Checklist renders multiple StepList components with list of Steps 1`] = `
<div
  className="measure-6"
>
  <BackButton
    href="/"
    label="Back to Dashboard"
  />
  <Title
    hidden={true}
  >
    Checklist: Create a new application
  </Title>
  <StepList
    description={
      <Trans
        i18nKey="pages.claimsChecklist.stepListDescription"
        tOptions={
          Object {
            "context": "1",
          }
        }
        values={
          Object {
            "absence_id": null,
          }
        }
      />
    }
    editText="Edit"
    key="1"
    resumeScreenReaderText="Continue with"
    resumeText="Resume"
    screenReaderNumberPrefix="Step"
    startText="Start"
    title={
      <React.Fragment>
        <HeadingPrefix>
          Part 1
        </HeadingPrefix>
        Tell us about yourself and your leave
      </React.Fragment>
    }
  >
    <Step
      completedText="Completed"
      editable={true}
      key="verifyId"
      number={1}
      status="not_started"
      stepHref="/claims/name?claim_id=mock_application_id"
      title="Verify your identity"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "verifyId",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="leaveDetails"
      number={2}
      status="disabled"
      stepHref="/claims/leave-reason?claim_id=mock_application_id"
      title="Enter leave details"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "leaveDetails",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="employerInformation"
      number={3}
      status="disabled"
      stepHref="/claims/employment-status?claim_id=mock_application_id"
      title="Enter employment information"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "employerInformation",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="otherLeave"
      number={4}
      status="disabled"
      stepHref="/claims/employer-benefits?claim_id=mock_application_id"
      title="Report other leave, income, and benefits"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "otherLeave",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="reviewAndConfirm"
      number={5}
      status="disabled"
      stepHref="/claims/review?claim_id=mock_application_id"
      title="Review and confirm"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "reviewAndConfirm",
          }
        }
      />
    </Step>
  </StepList>
  <StepList
    description={null}
    editText="Edit"
    key="2"
    resumeScreenReaderText="Continue with"
    resumeText="Resume"
    screenReaderNumberPrefix="Step"
    startText="Start"
    title={
      <React.Fragment>
        <HeadingPrefix>
          Part 2
        </HeadingPrefix>
        Enter your payment information
      </React.Fragment>
    }
  >
    <Step
      completedText="Completed"
      editable={true}
      key="payment"
      number={6}
      status="disabled"
      stepHref="/claims/payment-method?claim_id=mock_application_id"
      title="Add payment information"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "payment",
          }
        }
      />
    </Step>
  </StepList>
  <StepList
    description={null}
    editText="Edit"
    key="3"
    resumeScreenReaderText="Continue with"
    resumeText="Resume"
    screenReaderNumberPrefix="Step"
    startText="Start"
    title={
      <React.Fragment>
        <HeadingPrefix>
          Part 3
        </HeadingPrefix>
        Upload your documents
      </React.Fragment>
    }
  >
    <Step
      completedText="Completed"
      editable={true}
      key="uploadId"
      number={7}
      status="disabled"
      stepHref="/claims/upload-id?claim_id=mock_application_id"
      title="Upload identity document"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": "uploadId",
          }
        }
      />
    </Step>
    <Step
      completedText="Completed"
      editable={true}
      key="uploadCertification"
      number={8}
      status="disabled"
      stepHref="/claims/upload-certification?claim_id=mock_application_id"
      title="Upload leave certification documents"
    >
      <Trans
        components={
          Object {
            "healthcare-provider-form-link": <a
              href="https://www.mass.gov/hcp-form"
              rel="noopener"
              target="_blank"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsChecklist.stepHTMLDescription"
        tOptions={
          Object {
            "context": undefined,
          }
        }
      />
    </Step>
  </StepList>
  <ButtonLink
    className="margin-bottom-8"
    disabled={true}
    href="/claims/review?claim_id=mock_application_id"
  >
    Review and submit application
  </ButtonLink>
</div>
`;

exports[`Checklist renders success message after submitting part one 1`] = `
<Alert
  className="margin-bottom-3"
  heading="Part 1 of your application was confirmed successfully"
  name="part-one-submitted-message"
  state="success"
>
  Your in-progress application will be viewable by our Contact Center staff. If you need to make edits to Part 1, you'll need to call our Contact Center at 833‑344‑7365. Now, you can work on Parts 2 and 3, and submit your application.
</Alert>
`;

exports[`Checklist when Part 1 is submitted renders descriptions for Part 2 and 3 1`] = `"Entering payment information here leads to faster processing, but you can also call 833‑344‑7365."`;

exports[`Checklist when Part 1 is submitted renders descriptions for Part 2 and 3 2`] = `"Uploading documents online leads to faster processing, but you can also fax documents to NNN-NNN-NNNN, or mail them to 123 Address."`;

exports[`Checklist when Part 1 is submitted renders different description for Part 1 1`] = `
Array [
  "If you need to edit your information in Part 1, you’ll need to call the Contact Center at 833‑344‑7365. Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
  ".",
]
`;
